@@ -176,6 +176,7 @@ enum {
 
 #define WC_CES_SHIFT_JIS	(WC_CES_E_PRIV2|WC_CES_N_SHIFT_JIS)
 #define WC_CES_CP932		WC_CES_SHIFT_JIS
+#define WC_CES_CP943		WC_CES_SHIFT_JIS
 #define WC_CES_SHIFT_JISX0213	(WC_CES_E_PRIV2|WC_CES_N_SHIFT_JISX0213)
 #define WC_CES_GBK		(WC_CES_E_PRIV2|WC_CES_N_GBK)
 #define WC_CES_CP936		WC_CES_GBK
